# fast-api-cats

./: README.md  cats.json  main.py  pyproject.toml  requirements.txt
fast_api_project/: main.py
templates/: index.html
tests/: test_fast_api_project.py
