[tool.poetry]
name = "fast_api_project"
version = "0.1.0"
description = ""
authors = ["Heather Gray <heathergray153@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
Jinja2 = "^3.1.2"
uvicorn = "^0.18.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
